# ros-agents

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  basics.html  genindex.html  index.html  installation.html  intro.html  log.ini  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  test.py
.doctrees/: basics.doctree  environment.pickle  index.doctree  installation.doctree  intro.doctree  quickstart.doctree
.doctrees/apidocs/: index.doctree
.doctrees/apidocs/agents/: agents.clients.doctree  agents.clients.ollama.doctree  agents.clients.roboml.doctree  agents.components.doctree  agents.components.imagestovideo.doctree  agents.components.llm.doctree  agents.components.map_encoding.doctree  agents.components.mllm.doctree  agents.components.semantic_router.doctree  agents.components.speechtotext.doctree  agents.components.texttospeech.doctree  agents.components.vision.doctree  agents.config.doctree  agents.doctree  agents.models.doctree  agents.ros.doctree  agents.vectordbs.doctree
.doctrees/examples/: complete.doctree  conversational.doctree  goto.doctree  index.doctree  multiprocessing.doctree  prompt_engineering.doctree  semantic_map.doctree  semantic_router.doctree  tool_calling.doctree
.github/workflows/: documentation.yml
_sources/: index.md  installation.md  intro.md  quickstart.md
_sources/apidocs/: index.rst
_sources/apidocs/agents/: agents.clients.md  agents.clients.ollama.md  agents.clients.roboml.md  agents.components.imagestovideo.md  agents.components.llm.md  agents.components.map_encoding.md  agents.components.md  agents.components.mllm.md  agents.components.semantic_router.md  agents.components.speechtotext.md  agents.components.texttospeech.md  agents.components.vision.md  agents.config.md  agents.md  agents.models.md  agents.ros.md
_sources/examples/: conversational.md  index.md  multiprocessing.md  prompt_engineering.md  semantic_map.md  semantic_router.md  tool_calling.md
agents/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
agents/agents/: callbacks.py  config.py  executable.py  models.py  publisher.py  ros.py  vectordbs.py
agents/agents/chainlit_client/: app.py  chainlit.md
agents/agents/clients/: __init__.py  db_base.py  model_base.py  ollama.py  roboml.py
agents/agents/components/: __init__.py  component_base.py  imagestovideo.py  llm.py  map_encoding.py  mllm.py  model_component.py  semantic_router.py  speechtotext.py  texttospeech.py  vision.py
agents/agents/utils/: __init__.py  pluralize.py  utils.py  vad.py  voice.py
agents/msg/: Bbox2D.msg  Detection2D.msg  Tracking.msg  Trackings.msg
agents/scripts/: executable
agents/scripts/chainlit_client/: app.py  chainlit.md  tiny_web_client
agents/tests/: test_clients.py
agents_interfaces/: CMakeLists.txt  package.xml
agents_interfaces/msg/: Detection2D.msg  Detections2D.msg  Tracking.msg  Video.msg
apidocs/: index.html
apidocs/agents/: agents.clients.html  agents.clients.ollama.html  agents.clients.roboml.html  agents.components.html  agents.components.imagestovideo.html  agents.components.llm.html  agents.components.map_encoding.html  agents.components.mllm.html  agents.components.semantic_router.html  agents.components.speechtotext.html  agents.components.texttospeech.html  agents.components.vision.html  agents.config.html  agents.html  agents.models.html  agents.ros.html  agents.vectordbs.html
docs/: basics.md  conf.py  installation.md  intro.md  quickstart.md
docs/apidocs/agents/: agents.clients.ollama.md  agents.clients.roboml.md  agents.components.imagestovideo.md  agents.components.llm.md  agents.components.map_encoding.md  agents.components.mllm.md  agents.components.semantic_router.md  agents.components.speechtotext.md  agents.components.texttospeech.md  agents.components.vision.md  agents.config.md  agents.md  agents.models.md  agents.ros.md  agents.vectordbs.md
docs/examples/: complete.md  conversational.md  goto.md  index.md  multiprocessing.md  prompt_engineering.md  semantic_map.md  semantic_router.md  tool_calling.md
examples/: complete.html  complete_agent.py  complete_agent_multiprocessing.py  conversational.html  conversational_agent_with_audio.py  go_to_x.py  goto.html  index.html  multiprocessing.html  prompt_engineering.html  prompt_engineering.py  semantic_map.html  semantic_map.py  semantic_router.html  semantic_router.py  tool_calling.html  tool_calling.py
