<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agents</name>
  <version>0.2.0</version>
  <description>agents</description>
  <maintainer email="contact@automatikarobotics.com">Automatika Robotics</maintainer>
  <license>MIT License Copyright (c) 2024 Automatika Robotics</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>python3-pip</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pillow</depend>
  <depend>python3-opencv</depend>
  <depend>python3-jinja2</depend>
  <depend>python3-msgpack</depend>
  <depend>python3-msgpack-numpy</depend>
  <depend>python3-setproctitle</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>agents_interfaces</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
